objects/SVC__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <formula>Project_Master__r.ShipmentAccount__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Company_Code__c</fullName>
        <formula>Project_Master__r.ShipmentAccount__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Company_Name__c</fullName>
        <formula>Project_Master__r.ShipmentAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <formula>Project_Master__r.ShipmentPersonInCharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <formula>Project_Master__r.ShipmentAccount__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>BLANKVALUE( Project_Master__r.ShipmentEmail__c ,  Project_Master__r.ContractEmail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tel__c</fullName>
        <formula>Project_Master__r.ShipmentAccount__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Tel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsForm1__c</fullName>
        <formula>IF( ISPICKVAL(Serivice_Form__c, &apos;Form 1&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsForm1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsForm2__c</fullName>
        <formula>IF( ISPICKVAL(Serivice_Form__c, &apos;Form 2&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsForm2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsForm3__c</fullName>
        <formula>IF( ISPICKVAL(Serivice_Form__c, &apos;Form 3&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsForm3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsType1__c</fullName>
        <formula>IF( ISPICKVAL(Service_Type__c, &apos;Type 1&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsType1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsType2__c</fullName>
        <formula>IF( ISPICKVAL(Service_Type__c, &apos;Type 2&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsType2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsType3__c</fullName>
        <formula>IF( ISPICKVAL(Service_Type__c, &apos;Type 3&apos;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsType3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_No__c</fullName>
        <label>Job No</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Project_Master__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Supplied_Total__c</fullName>
        <label>Parts Supplied Total</label>
        <summarizedField>Parts__c.Grant_Total__c</summarizedField>
        <summaryForeignKey>Parts__c.SVC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Performed_Solution__c</fullName>
        <label>Performed / Solution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probrem_Request__c</fullName>
        <label>Probrem / Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Master</label>
        <referenceTo>AsiaProjectMaster__c</referenceTo>
        <relationshipLabel>SVC</relationshipLabel>
        <relationshipName>SVC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotation_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation Number</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipLabel>SVC</relationshipLabel>
        <relationshipName>SVC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Project_Master__r.SerialNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <formula>Project_Master__r.Series__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serivice_Form__c</fullName>
        <label>Serivice Form</label>
        <picklist>
            <picklistValues>
                <fullName>Form 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 7</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postpone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SVC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Company_Code__c</columns>
        <columns>Customer_Company_Name__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <columns>Date__c</columns>
        <columns>Job_No__c</columns>
        <columns>Model__c</columns>
        <columns>Quotation_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SVC-{0000}</displayFormat>
        <label>SVC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>